--- a/src/Bintangku.WebApi/appsettings.Development.json
+++ b/src/Bintangku.WebApi/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=bintangku.db"
   },
+  "TokenKey": "super secret unguesstable key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
