--- a/src/Bintangku.WebUI/client/angular.json
+++ b/src/Bintangku.WebUI/client/angular.json
@@ -21,8 +21,8 @@
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/bootstrap/dist/js/bootstrap.js",
               "src/styles.css"
             ],
             "scripts": []
