--- a/src/Bintangku.WebUI/client/package.json
+++ b/src/Bintangku.WebUI/client/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "bootstrap": "4.6",
+    "bootswatch": "^4.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
