--- a/src/Bintangku.WebUI/client/angular.json
+++ b/src/Bintangku.WebUI/client/angular.json
@@ -21,10 +21,10 @@
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.css",
-              "node_modules/bootstrap/dist/js/bootstrap.js",
-              "node_modules/font-awesome/css/font-awesome.css",
-              "node_modules/ngx-toastr/toastr.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "./node_modules/bootstrap/dist/js/bootstrap.js",
+              "./node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
             ],
             "scripts": []
