--- a/src/Bintangku.WebUI/client/package.json
+++ b/src/Bintangku.WebUI/client/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
-    "bootstrap": "4.6",
+    "bootstrap": "4.0",
     "bootswatch": "^4.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-toastr": "^13.2.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
