--- a/src/Bintangku.WebApi/appsettings.Development.json
+++ b/src/Bintangku.WebApi/appsettings.Development.json
@@ -1,13 +1,13 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data source=bintangku.db"
-  },
-  "TokenKey": "super secret unguesstable key",
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "ConnectionStrings": {
+        "DefaultConnection": "Data source=bintangku.db;"
+    },
+    "TokenKey": "super secret unguesstable key",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Information",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
     }
-  }
 }
