--- a/src/Bintangku.WebUI/client/package.json
+++ b/src/Bintangku.WebUI/client/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~10.2.0",
     "@angular/compiler": "~10.2.0",
     "@angular/core": "~10.2.0",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~10.2.0",
     "@angular/localize": "~10.2.0",
     "@angular/material": "^10.2.7",
@@ -25,6 +26,7 @@
     "bootstrap": "4.0",
     "bootswatch": "^4.6.0",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-toastr": "^13.2.0",
