--- a/src/Bintangku.WebApi/appsettings.json
+++ b/src/Bintangku.WebApi/appsettings.json
@@ -1,10 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "CloudinarySettings": {
+        "CloudName": "decclycft",
+        "ApiKey": "773799672675612",
+        "ApiSecret": "0x9doDp1MVXuRdgc_thCdzCF1Fg"
+    },
+    "AllowedHosts": "*"
 }
