--- a/src/Bintangku.WebApi/appsettings.Development.json
+++ b/src/Bintangku.WebApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Data source=bintangku.db;"
+        "DefaultConnection": "Server=localhost; Port=5431; User Id=postgres; Password=r1r1nsd4n4d1; Database=Bintangku"
     },
     "TokenKey": "super secret unguesstable key",
     "Logging": {
