--- a/Bintangku.WebUI/client/package.json
+++ b/Bintangku.WebUI/client/package.json
@@ -29,6 +29,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-spinner": "^10.0.1",
     "ngx-toastr": "^13.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
