--- a/Bintangku.WebApi/Bintangku.WebApi.csproj
+++ b/Bintangku.WebApi/Bintangku.WebApi.csproj
@@ -20,9 +20,12 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
-    
-  <Content Include="Resource\*">
-    <CopyToPublishDirectory>always</CopyToPublishDirectory>
-  </Content>
+
+  <ItemGroup>
+    <Content Include="Resource\*">
+      <CopyToPublishDirectory>always</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>  
+  
 
 </Project>
