Fixing Resources folder in production 3

--- a/Bintangku.WebApi/Bintangku.WebApi.csproj
+++ b/Bintangku.WebApi/Bintangku.WebApi.csproj
@@ -23,7 +23,7 @@
 
   <ItemGroup>
     <Content Include="Resource\*">
-      <CopyToPublishDirectory>always</CopyToPublishDirectory>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
     </Content>
   </ItemGroup>  
   
