Fixing Resources folder in production 13

--- a/Bintangku.WebApi/Bintangku.WebApi.csproj
+++ b/Bintangku.WebApi/Bintangku.WebApi.csproj
@@ -25,6 +25,9 @@
     <Content Include="Resource\*">
       <CopyToPublishDirectory>Always</CopyToPublishDirectory>
     </Content>
+    <Content Include="MyStaticFiles\*">
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>  
   
 
