--- a/Bintangku.WebApi/Bintangku.WebApi.csproj
+++ b/Bintangku.WebApi/Bintangku.WebApi.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
    <Content Include="Resources/*" CopyToPublishDirectory="Always" />
+   <Content Include="Resources/*" CopyToOutputDirectory="Always" />
   </ItemGroup>
 
 </Project>
