--- a/Bintangku.WebUI/client/package.json
+++ b/Bintangku.WebUI/client/package.json
@@ -20,6 +20,7 @@
     "@angular/forms": "~10.2.0",
     "@angular/localize": "~10.2.0",
     "@angular/material": "^10.2.7",
+    "@angular/material-moment-adapter": "^11.2.5",
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
@@ -28,6 +29,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-spinner": "^10.0.1",
     "ngx-toastr": "^13.2.0",
