--- a/Bintangku.WebApi/appsettings.Development.json
+++ b/Bintangku.WebApi/appsettings.Development.json
@@ -1,13 +1,13 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost; Port=5431; User Id=postgres; Password=r1r1nsd4n4d1; Database=Bintangku"
-    },
-    "TokenKey": "super secret unguesstable key",
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Information",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=postgres; Password=@Adiganteng123; Database=Bintangku"
+  },
+  "TokenKey": "super secret unguesstable key",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
+  }
 }
