--- a/Bintangku.WebUI/client/package.json
+++ b/Bintangku.WebUI/client/package.json
@@ -12,22 +12,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.3",
-    "@angular/cdk": "^10.2.7",
+    "@angular/cdk": "^12.0.2",
     "@angular/common": "~12.0.3",
     "@angular/compiler": "~12.0.3",
     "@angular/core": "~12.0.3",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~12.0.3",
     "@angular/localize": "~12.0.3",
-    "@angular/material": "^10.2.7",
-    "@angular/material-moment-adapter": "^11.2.5",
+    "@angular/material": "^12.0.2",
+    "@angular/material-moment-adapter": "^12.0.2",
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
     "bootstrap": "4.0",
     "bootswatch": "^4.6.0",
     "font-awesome": "^4.7.0",
-    "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "ngx-bootstrap": "^6.2.0",
@@ -39,21 +38,25 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "~10.2.0",
+    "@angular-devkit/build-angular": "~12.0.2",
+    "@angular/cli": "~12.0.2",
     "@angular/compiler-cli": "~12.0.3",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "autoprefixer": "^10.2.6",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.3.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "postcss": "^8.3.0",
+    "postcss-loader": "^5.3.0",
     "protractor": "~7.0.0",
+    "tailwindcss": "^2.1.4",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.2.4"
