feture: membuat tampilan header footer

--- a/Bintangku.WebUI/client/angular.json
+++ b/Bintangku.WebUI/client/angular.json
@@ -5,7 +5,11 @@
   "projects": {
     "client": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -131,10 +135,5 @@
   "defaultProject": "client",
   "cli": {
     "analytics": "f593f0fe-c886-4c0b-b20f-d73d894bc16b"
-  },
-  "schematics": {
-    "@schematics/angular:component": {
-      "styleext": "scss"
-    }
   }
 }
