--- a/Bintangku.WebUI/client/package.json
+++ b/Bintangku.WebUI/client/package.json
@@ -1,6 +1,9 @@
 {
   "name": "client",
   "version": "0.0.0",
+  "eslintIgnore": [
+    "tailwind.config.js"
+  ],
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -27,7 +30,6 @@
     "bootstrap": "4.0",
     "bootswatch": "^4.6.0",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-spinner": "^10.0.1",
@@ -39,13 +41,20 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.2",
+    "@angular-eslint/builder": "12.1.0",
+    "@angular-eslint/eslint-plugin": "12.1.0",
+    "@angular-eslint/eslint-plugin-template": "12.1.0",
+    "@angular-eslint/schematics": "12.1.0",
+    "@angular-eslint/template-parser": "12.1.0",
     "@angular/cli": "~12.0.2",
     "@angular/compiler-cli": "~12.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "4.23.0",
+    "@typescript-eslint/parser": "4.23.0",
     "autoprefixer": "^10.2.6",
-    "codelyzer": "^6.0.0",
+    "eslint": "^7.26.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.3",
@@ -58,7 +67,6 @@
     "protractor": "~7.0.0",
     "tailwindcss": "^2.1.4",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
     "typescript": "~4.2.4"
   }
 }
