--- a/Bintangku.WebApi/appsettings.json
+++ b/Bintangku.WebApi/appsettings.json
@@ -1,15 +1,16 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
-    "CloudinarySettings": {
-        "CloudName": "decclycft",
-        "ApiKey": "773799672675612",
-        "ApiSecret": "0x9doDp1MVXuRdgc_thCdzCF1Fg"
-    },
-    "AllowedHosts": "*"
+  "https_port": 443,
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "CloudinarySettings": {
+    "CloudName": "decclycft",
+    "ApiKey": "773799672675612",
+    "ApiSecret": "0x9doDp1MVXuRdgc_thCdzCF1Fg"
+  },
+  "AllowedHosts": "*"
 }
