--- a/Bintangku.WebUI/client/package.json
+++ b/Bintangku.WebUI/client/package.json
@@ -48,6 +48,7 @@
     "@angular-eslint/template-parser": "12.1.0",
     "@angular/cli": "~12.0.2",
     "@angular/compiler-cli": "~12.0.3",
+    "@tailwindcss/forms": "^0.3.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
